# OpenPS2emulator

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CREDITS.MD  README.md  SECURITY.md
src/: display.cpp  display.h  input.cpp  input.h  main.cpp
src/core/: cpu.cpp  cpu.h  memory.cpp  memory.h
